[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Background/다운로드.png" type="Texture" id=2]
[ext_resource path="res://Entities/Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Racket/Player2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=5]
[ext_resource path="res://Menus/HUD/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 256 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2( 512, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
shape = SubResource( 1 )
one_way_collision_margin = 2.2

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 512, 522 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
shape = SubResource( 1 )
one_way_collision_margin = 2.2

[node name="GoalLeft" type="Area2D" parent="."]
position = Vector2( -10, 256 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft"]
shape = SubResource( 2 )

[node name="GoalRight" type="Area2D" parent="."]
position = Vector2( 1034, 256 )
collision_layer = 2
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight"]
shape = SubResource( 2 )

[node name="Field" type="Sprite" parent="."]
position = Vector2( 515.207, 256.204 )
scale = Vector2( 1.5953, 1.39431 )

[node name="다운로드" type="Sprite" parent="Field"]
position = Vector2( 14.7986, -3.50561 )
scale = Vector2( 1.06819, 1.02979 )
texture = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
margin_left = -6.10352e-05
margin_top = -3.05176e-05

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 256 )
scale = Vector2( 0.5, 0.5 )

[node name="Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 256 )
scale = Vector2( 0.5, 0.5 )

[node name="Player2" parent="." instance=ExtResource( 4 )]
position = Vector2( 974, 256 )
scale = Vector2( 0.5, 0.5 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GameOver" type="ConfirmationDialog" parent="."]
margin_left = 424.068
margin_top = 206.688
margin_right = 624.068
margin_bottom = 276.688
window_title = "Game Over"
dialog_text = "Play Again?"
[connection signal="goal_left" from="." to="." method="_on_Game_goal_left"]
[connection signal="goal_right" from="." to="." method="_on_Game_goal_right"]
[connection signal="body_entered" from="GoalLeft" to="." method="_on_GoalLeft_body_entered"]
[connection signal="body_entered" from="GoalRight" to="." method="_on_GoalRight_body_entered"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="confirmed" from="GameOver" to="." method="_on_GameOver_confirmed"]
